# deepseek_agent

./: .env.example  CHANGELOG.md  Cargo.toml  README.md
docs/: llm-tool-calling-guide.md
examples/: amap_example.rs
src/: lib.rs  main.rs  mcp_client.rs  mcp_server_simple.rs  mcp_tools.rs
src/tools/: amap.rs  mod.rs  serper.rs
