[package]
edition = "2024"
name = "deepseek_agent"
version = "0.2.0"

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
