[package]
edition = "2024"
name = "deepseek_agent"
version = "0.4.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server_simple.rs"

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
# MCP dependencies
rmcp = {git = "https://github.com/modelcontextprotocol/rust-sdk.git"}
rmcp-macros = {git = "https://github.com/modelcontextprotocol/rust-sdk.git"}
async-trait = "0.1"
